updating blog post and projects pages

--- a/mysite/contact/templates/contact/home.html
+++ b/mysite/contact/templates/contact/home.html
@@ -9,11 +9,11 @@
       </left>
   </div>
 </div><hr>
-<img src="{% static 'personal/img/profile_park2_cropped.png' %}" class="img-rounded" style='max-height:250px;' alt="face" rotate="90">
-<h3><b>Email: </b><a href="mailto:ben.suutari@gmail.com">ben.suutari@gmail.com</a></h3>
-<h3><b>Github: </b> <a href="https://github.com/bensuutari">github.com/bensuutari</a></h3>
-<h3><b>LinkedIn: </b> <a href="https://www.linkedin.com/in/benjamin-suutari-22a0262b/">linkedin.com/in/benjamin-suutari-22a0262b/</a></h3>
-<h3><b>My CV: </b> <a href="https://www.dropbox.com/s/xfp5nt257ydatxc/Ben_Suutari_Resume.pdf?dl=0">https://www.dropbox.com/s/xfp5nt257ydatxc/Ben_Suutari_Resume.pdf?dl=0</a></h3>
-<h3><b>Lab Website: </b> <a href="http://tsienlab.med.nyu.edu/">Tsien Lab</a></h3>
+<!--<img src="{% static 'personal/img/profile_park2_cropped.png' %}" class="img-rounded" style='max-height:250px;' alt="face" rotate="90"> -->
+
+<h3><a href="mailto:ben.suutari@gmail.com" target="blank"><i class="fa fa-envelope fa-2x" aria-hidden="true" style="color:black"></i></a><b>	Email: </b><a href="mailto:ben.suutari@gmail.com">ben.suutari@gmail.com</a></h3>
+<h3><a href="https://github.com/bensuutari" target="blank"><i class="fa fa-github-square fa-2x" aria-hidden="true" style="color:black"></i></a><b>	Github: </b> <a href="https://github.com/bensuutari">github.com/bensuutari</a></h3>
+<h3><a href="https://www.linkedin.com/in/benjamin-suutari-22a0262b/" target="blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true" style="color:black"></i></a><b>	LinkedIn: </b> <a href="https://www.linkedin.com/in/benjamin-suutari-22a0262b/">linkedin.com/in/benjamin-suutari-22a0262b/</a></h3>
+<h3><a href="http://tsienlab.med.nyu.edu/" target="blank"><i class="fa fa-flask fa-2x" aria-hidden="true" style="color:black"></i></a><b>	Lab Website: </b> <a href="http://tsienlab.med.nyu.edu/">tsienlab.med.nyu.edu/</a></h3>
 <!-- {% include "personal/includes/htmlsnippet.html" %} -->
 {% endblock %}
