--- a/mysite/blog/templates/blog/post.html
+++ b/mysite/blog/templates/blog/post.html
@@ -7,13 +7,25 @@
 	<br>
 	<br>
 	{{post.body|safe|linebreaks}}
-	<a href="https://twitter.com/share" class="..." data-url="http://reddit.com">
-	<i class="fa fa-twitter"></i> Share on Twitter</i>
-	</a>
-	<br>
-	<a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://reddit.com&amp;title=Thisisatest&amp;source=http://reddit.com/" class="..." data-url="http://reddit.com">
-	<i class="fa fa-linkedin"></i> Share on LinkedIn</i>
-	</a>
-	<br>
-	<div class="fb-share-button" data-href="https://reddit.com" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Freddit.com%2F&amp;src=sdkpreparse">Share</a></div>
+
+	<div id="disqus_thread"></div>
+	<script>
+
+		/**
+		*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+		*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+		/*
+		var disqus_config = function () {
+		this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+		this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+		};
+		*/
+		(function() { // DON'T EDIT BELOW THIS LINE
+		var d = document, s = d.createElement('script');
+		s.src = 'https://bensuutari-com.disqus.com/embed.js';
+		s.setAttribute('data-timestamp', +new Date());
+		(d.head || d.body).appendChild(s);
+		})();
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endblock %}
